Sync queue(3) from FreeBSD

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=85147